# simple_emailer_desktop

./: .gitignore  LICENSE.md  config.json  pyproject.toml
emails/: example_with_args.html  example_without_args.html
simple_emailer_desktop/: __main__.py
simple_emailer_desktop/gui/: __init__.py  message_error.py  message_info.py  simple_emailer.py  simple_emailer_about.py
simple_emailer_desktop/gui/forms/: __init__.py  simple_emailer.py  simple_emailer_about.py
simple_emailer_desktop/utils/: __init__.py  get_env_sender_data.py
